--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Console</title>
-<!-- 
-	<script src="hterm_all.js"></script>
-    <script src="../serial.js"></script>
-    <script src="console.js"></script>
--->	
-	<script src="test.js"></script>
+    <title>WebUSB Demos</title>
   </head>
   <body>
-    <p>
-      <button id="connect">Connect</button>
-    </p>
-    <div id="terminal" style="position:relative; width:100%; height:100%"></div>
+    <h1>WebUSB Demos</h1>
+    <ul>
+      <li><a href="console/">Console</a></li>
+      <li><a href="rgb/">RGB LED</a></li>
+    </ul>
   </body>
 </html>
