--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   </head>
   <body>
     <h1>WebUSB Demos</h1>
-    <ul>
-      <li><a href="console/">Console</a></li>
-      <li><a href="rgb/">RGB LED</a></li>
-    </ul>
+	 <script src="test.js"></script>
   </body>
 </html>
