--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebUSB Demos</title>
+    <title>WebUSB LK Demos</title>
   </head>
   <body>
-    <h1>WebUSB Demos</h1>
+    <h1>WebUSB Test Demos</h1>
 	<script src="test.js"></script>
   </body>
 </html>
