--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>WebUSB Test Demos</h1>
+    <button type="button" id="clickButton">Click Me!</button>
 	<script src="test.js"></script>
   </body>
 </html>
