--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebUSB LK Demos</title>
+    <title>WebUSB Demos</title>
   </head>
   <body>
-    <h1>WebUSB Test Demos</h1>
-    <button type="button" id="clickButton">Click Me!</button>
-	<script src="test.js"></script>
+    <h1>WebUSB Demos</h1>
+    <ul>
+      <li><a href="console/">Console</a></li>
+      <li><a href="rgb/">RGB LED</a></li>
+    </ul>
   </body>
 </html>
