--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebUSB Demos</title>
+    <title>WebUSB LK Demos</title>
   </head>
   <body>
-    <h1>WebUSB Demos</h1>
-    <ul>
-      <li><a href="console/">Console</a></li>
-      <li><a href="rgb/">RGB LED</a></li>
-    </ul>
+    <h1>WebUSB Test Demos</h1>
+    <button type="button" id="clickButton">Click Me!</button>
+	<script src="test.js"></script>
   </body>
 </html>
