--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebUSB LK Demos</title>
+    <title>WebUSB Demos</title>
   </head>
   <body>
     <h1>WebUSB Test Demos</h1>
